HTML content, images, css nav added

--- a/index.html
+++ b/index.html
@@ -7,25 +7,44 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <ul>
-        <img class="logo" src="" alt="" />
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-        <li><a href=""></a></li>
-      </ul>
-    </nav>
-    <main>
-      <section>
-        <h1></h1>
-        <p></p>
-        <button></button>
-      </section>
-      <img class="main-img" src="" alt="" />
-    </main>
-    <footer>
-      <a href=""></a>
-    </footer>
-    <img class="balls" src="" alt="" />
+    <div class="page">
+      <nav>
+        <img class="logo" src="./images/logo.svg" alt="Treine.me" />
+        <ul>
+          <li><a href="#">Home</a></li>
+          <li><a href="#">Sobre</a></li>
+          <li><a href="#">Treinar</a></li>
+        </ul>
+      </nav>
+      <main>
+        <section>
+          <h1>Treinos <span>exclusivos</span> para você!</h1>
+          <p>
+            Nós criamos treinos <strong>exclusivos e únicos para você.</strong
+            ><br />
+            Invista no seu corpo e
+            <span>tenha muito mais performance</span> e<br />
+            qualidade de vida.
+          </p>
+          <button>
+            <img src="./images/whatsapp.svg" alt="logo whatsapp" />
+            Comece já
+          </button>
+        </section>
+        <img
+          class="main-img"
+          src="./images/main-image.png"
+          alt="Desenho de uma mulher pulando corda em uma academia"
+        />
+      </main>
+      <footer>
+        fale conosco no instagram 
+        <a href="#">@treine.me</a></footer>
+    </div>
+    <img
+      class="balls"
+      src="./images/balls.svg"
+      alt="Bolinhas esverdeadas no canto inferior direito da tela"
+    />
   </body>
 </html>
